# marblecutter-virtual

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.bak  README.md  docker-compose.yml  git-deploy.sh  pyproject.toml  requirements-frozen.txt  requirements.txt  server.py
.github/workflows/: test_docker.yaml
caddy/: Caddyfile
marblecutter/: __init__.py  recipes.py
templates/: index.html  preview.html
varnish/: default.vcl
virtual/: catalogs.py  validate_cloud_optimized_geotiff.py  web.py
