[tool.poetry]
name = "marblecutter"
version = "0.1.0"
description = ""
authors = ["Patrick Kage <patrick.r.kage@gmail.com>"]
readme = "README.md"
packages = [{include = "marblecutter"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
flask = "^2.2.2"
flask-cors = "^3.0.10"
mock = "^5.0.1"
cachetools = "^5.3.0"
gdal = "^3.6.2"
rasterio = {extras = ["s3"], version = "^1.3.5.post1"}
haversine = "^2.7.0"
numexpr = "^2.8.4"
rio-pansharpen = "^0.2.0"
rio-tiler = "^4.1.7"
rio-toa = "^0.3.0"
mercantile = "^1.2.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
